Made important changes to the API, begin work on gadgets interface
